docker-scripts/pihole/pihole.lb.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/address-pool: pihole
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
#   loadBalancerIP: 192.168.1.200
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP

    - name: client-udp
      port: 67
      targetPort: client-udp
      protocol: UDP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pihole-lb-tcp
#   namespace: pihole
#   annotations:
#     metallb.universe.tf/address-pool: default
#     metallb.universe.tf/allow-shared-ip: pihole
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   loadBalancerIP: 192.168.1.200
#   selector:
#     app: pihole
#   ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
