docker-scripts/pihole/pihole.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP

    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP

    - name: client-udp
      port: 67
      targetPort: client-udp
      protocol: UDP

    - name: http
      port: 80
      targetPort: http
      protocol: TCP
