docker-scripts/pihole/pihole.udp.lb.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
  namespace: pihole
  annotations:
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: client-udp
      protocol: UDP
      port: 67
      targetPort: 67
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
