docker-scripts/pihole/pihole.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: "public"
    # cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pihole.lan
      secretName: pihole-secret
  rules:
    - host: pihole.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  name: http
